[package]
name = "admarusd"
version = "0.1.0"
edition = "2021"

[dependencies]
kamilata = {path = "../../kamilata"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
scraper = "0.16"
warp = {version="0.3", default-features = false}
reqwest = {version="0.11", default-features = false}
