[package]
name = "admarus-census"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
tokio = { version = "1.15", features = ["sync", "time", "fs", "macros"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8"
libp2p = {version="0.51", default-features=false, features=["ed25519", "rsa", "ecdsa", "secp256k1"] }
sha2 = "0.10"
sha2-derive = "0.1"

[features]
default = ["ip_filter"]
ip_filter = []
debug_logs = []
