[package]
name = "admarusd"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = {version="0.52", features=["tcp", "tokio", "noise", "yamux", "macros"]}
libp2p-identity = "0.2"
libp2p-identify = "0.43"
discovery-protocol = {path = "../discovery-protocol"}
libipld = "0.16"
kamilata = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
async-trait = "0.1"
scraper = "0.17"
warp = {version="0.3", default-features = false}
reqwest = {version="0.11", features=["multipart"], default-features = false}
futures = "0.3"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
clap = {version="4.3", features = ["derive"]}
sha2 = "0.10"
sha2-derive = "0.1"
faster-pest = "0.1"
word-lists = {path="../word-lists"}
bimap = "0.6"
