[package]
name = "admarus-webui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version="0.20", features=["csr"] }
yew-template = "0.10"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]
